# traymonitor

./: .editorconfig  .gitignore  README.md  biome.jsonc  package.json  pnpm-lock.yaml  todo.org  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: GETTING_STARTED.md  SECURITY.md  SECURITY_PRODUCTION.md  tasks.md  template-requirements.md
docs/developer/: bundle-optimization.md  releases.md  testing.md
scripts/: prepare-release.js
src/: app-legacy.tsx  app.css  app.test.tsx  app.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  rustfmt.toml  tauri.conf.json  tauri.prod.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bindings.rs  constants.rs  lib.rs  logger.rs  main.rs  notifications.rs  path.rs  settings.rs  tray.rs
src-tauri/src/commands/: alerts.rs  app.rs  builds.rs  mod.rs  notifications.rs  settings.rs  windows.rs
src-tauri/src/serde/: mod.rs
src-tauri/src/services/: alert_store.rs  build_cache.rs  build_store.rs  mod.rs  poll.rs  quickbuild.rs
src-tauri/src/types/: alert.rs  build.rs  mod.rs  settings.rs
src-tauri/src/utils/: mod.rs  times.rs
src/components/: error-boundary.tsx  loading.tsx  theme-provider.tsx
src/components/command-palette/: command-palette.tsx  index.ts
src/components/icons/: icon.tsx  icons.tsx
src/components/layout/: index.ts  layout.tsx  left-sidebar.tsx  main-window-content.tsx  main-window.tsx  right-sidebar.tsx
src/components/preferences/: index.ts  preferences-dialog.tsx
src/components/preferences/panes/: advanced-pane.tsx  appearance-pane.tsx  general-pane.tsx
src/components/titlebar/: macos-window-controls.tsx  title-bar.tsx  window-control-icons.tsx
src/components/ui/: date-picker.tsx  dialog.tsx  field.tsx  item.tsx  native-select.tsx  sidebar.tsx  sonner.tsx  tag-input.tsx
src/hooks/: use-command-context.ts  use-main-window-event-listeners.ts  use-theme.ts
src/lib/: bindings.ts  logger.ts  notifications.ts  query-client.ts  recovery.ts  time.test.ts  time.ts  updater.ts
src/lib/commands/: commands.test.ts  index.ts  navigation-commands.ts  notification-commands.ts  registry.ts  types.ts  window-commands.ts
src/services/: alerts.ts  builds.ts  preferences.ts
src/store/: ui-store.test.ts  ui-store.ts
src/test/: example.test.ts  setup.ts  test-utils.tsx
src/types/: commands.ts  preferences.ts
src/views/: about.tsx  alerts.tsx  builds.tsx  dashboard.tsx  main.tsx  settings.tsx
